--- a/MoreArtifacts/Properties/Resources.resx
+++ b/MoreArtifacts/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="confusion_deselected" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\confusion_deselected.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="confusion_selected" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\confusion_selected.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="conglomerate_deselected" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\conglomerate_deselected.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
